Field_Test/SDF/제어기/facilities/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facilities
  labels:
    framework: sdlmicro
spec:
  selector:
    app: facilities
    framework: sdlmicro
  ports:
   - name: grpc
     protocol: TCP
     port: 50251
     targetPort: 50251
   - name: metric
     protocol: TCP
     port: 9011
     targetPort: 9011
   - name: http
     protocol: TCP
     port: 80
     targetPort: 5000
   - name: admin
     protocol: TCP
     port: 9901
     targetPort: 9901
